--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
