--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
+click = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
