Added postgres image to docker-compose and corresponding env variables to development.json.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,12 @@ services:
       - "5000:5000"
     volumes:
       - ./:/app
+  database:
+    image: postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_HOSTNAME: ${POSTGRES_HOSTNAME}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "${POSTGRES_PORT}:5432"
