--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,14 @@ authors = ["Yasmin Haque <yasminhaque97@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 flask = "^1.1.2"
+flask_sqlalchemy = "^2.4.4"
+flask-migrate = "^2.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
 click = "^7.1.2"
+coverage = "^5.3"
+pytest-cov = "^2.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
