--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 flask = "^1.1.2"
 flask_sqlalchemy = "^2.4.4"
 flask-migrate = "^2.5.3"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
