--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask_sqlalchemy = "^2.4.4"
 flask-migrate = "^2.5.3"
 psycopg2-binary = "^2.8.6"
 flask-bcrypt = "^0.7.1"
+marshmallow = "^3.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.1"
